# xmz-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GIT_LEARNING.md  PROJECT_DESIGN.md  ROADMAP.md
docs/learning-journal/: 00-project-kickoff.md  01-bailian-model-provider.md  02-cli-chat.md  03-tool-foundation.md  04-tool-calling-agent.md  05-portfolio-domain.md  06-market-data-abstraction.md  07-real-market-data.md  08-market-data-routing.md  09-portfolio-dashboard.md  README.md
scripts/: __init__.py  check_agent_tools.py  check_bailian.py  check_market_data.py  check_market_data_routing.py  check_portfolio.py  check_real_market_data.py  step01_check_bailian.py  step02_check_agent_tools.py  step03_check_portfolio.py  step04_check_market_data.py  step05_check_real_market_data.py  step06_check_market_data_routing.py
src/finagent/: __init__.py  cli.py
src/finagent/agents/: __init__.py  errors.py  tool_calling.py
src/finagent/core/: __init__.py  chat.py  config.py
src/finagent/dashboard/: __init__.py  errors.py  manual_prices.py  models.py  service.py
src/finagent/data/: __init__.py  akshare.py  base.py  cache.py  diagnostics.py  errors.py  fake.py  goldapi.py  routing.py  service.py
src/finagent/llm/: __init__.py  bailian.py  base.py  errors.py  schemas.py
src/finagent/portfolio/: __init__.py  calculator.py  catalog.py  errors.py  models.py  repository.py  rounding.py
src/finagent/tools/: __init__.py  base.py  defaults.py  errors.py  investment.py  registry.py
src/finagent/web/: __init__.py  app.py  composition.py  server.py
src/finagent/web/static/: dashboard.css  dashboard.js
src/finagent/web/templates/: dashboard.html
tests/: test_akshare_provider.py  test_asset_catalog.py  test_bailian_provider.py  test_chat.py  test_cli.py  test_config.py  test_dashboard_service.py  test_goldapi_provider.py  test_holding_repository.py  test_llm_schemas.py  test_manual_price_repository.py  test_market_data.py  test_market_data_cache.py  test_market_data_routing.py  test_market_data_routing_script.py  test_portfolio_calculator.py  test_portfolio_models.py  test_real_market_data_script.py  test_tool_calling_agent.py  test_tools.py  test_web_api.py
